<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/poza3"
    tools:context=".Register">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/wendy_one"
        android:text="@string/i_tickets"
        android:textColor="#F7FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wendy_one"
        android:text="@string/creaza_un_cont_nou"
        android:textColor="#FC111010"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <EditText
        android:id="@+id/nume"
        android:layout_width="330dp"
        android:layout_height="74dp"
        android:autofillHints=""
        android:drawableStart="@drawable/nume"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/wendy_one"
        android:hint="@string/nume"
        android:inputType="textPersonName"
        android:textColor="#0F0D0D"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <EditText
        android:id="@+id/tel"
        android:layout_width="330dp"
        android:layout_height="74dp"
        android:autofillHints=""
        android:drawableStart="@drawable/tel"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/wendy_one"
        android:hint="@string/telefon"
        android:inputType="textPersonName"
        android:phoneNumber="true"
        android:textColor="#141313"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <EditText
        android:id="@+id/parola"
        android:layout_width="330dp"
        android:layout_height="74dp"
        android:autofillHints=""
        android:drawableStart="@drawable/pass"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/wendy_one"
        android:hint="@string/parola"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="#181616"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

    <Button
        android:id="@+id/creeazabtn"
        android:layout_width="300dp"
        android:layout_height="69dp"
        android:background="#8AFFFFFF"
        android:backgroundTint="#1DAF8D"
        android:fontFamily="@font/wendy_one"
        android:text="@string/creati_contul"
        android:textColor="#1A1717"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text1"
        app:layout_constraintVertical_bias="0.688" />

    <TextView
        android:id="@+id/cont"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:fontFamily="@font/wendy_one"
        android:text="@string/ai_deja_cont_conecteaza_te"
        android:textColor="#FC160202"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <EditText
        android:id="@+id/email"
        android:layout_width="330dp"
        android:layout_height="74dp"
        android:autofillHints=""
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/wendy_one"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        android:textColor="#F80E0D0D"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />


</androidx.constraintlayout.widget.ConstraintLayout>